--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 body{
     background-color: black;
 }
+p{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 40px;
+    text-align: end;
+    color: wheat;
+}
