--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body{
     background-color: black;
+    display: flex;
+    width: 1200px;
+flex-direction: column;
 }
 p{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
     text-align: end;
     color: wheat;
-}
-img{
-    margin: 50px auto;
 }
